fix double scrollbar on desktop (#564)

--- a/demo/src/stylesheets/_blog.scss
+++ b/demo/src/stylesheets/_blog.scss
@@ -8,6 +8,11 @@ iframe {
   padding-top: $topbar-height;
   width: 100%;
   height: 100vh;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
+  overflow-y: hidden;
+}
+@media screen and (max-device-width: 768px) {
+  .blog-page {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
 }
